[gd_scene load_steps=4 format=2]

[ext_resource path="res://pickups/pickup.gd" type="Script" id=1]
[ext_resource path="res://sfx/other/sfx_coin_cluster1.wav" type="AudioStream" id=2]

[sub_resource type="CircleShape2D" id=1]
resource_local_to_scene = true

[node name="Pickup" type="Area2D"]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SoundEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Pickup_body_entered"]
[connection signal="finished" from="SoundEffect" to="." method="_on_SoundEffect_finished"]
